Fixed text widget spacing issue

--- a/telos-frontend/src/components/text/TextWidget.module.css
+++ b/telos-frontend/src/components/text/TextWidget.module.css
@@ -13,8 +13,9 @@
   box-shadow: 3px 3px 3px darkgrey;
   resize: none;
   position: relative;
+  width: 99%;
   height: calc(100% - 10px);
-  border: 1px solid #7a00f4;
+  border: 2px solid #7a00f4;
   background-color: white !important;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
